problem with sorting of incorrect files was fixed